// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/FontPicker default 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="euiPopover__anchor euiSuperSelect__popoverAnchor"
  >
    <input
      defaultValue=""
      type="hidden"
    />
    <div
      className="euiFormControlLayout euiFormControlLayout--compressed"
    >
      <div
        className="euiFormControlLayout__childrenWrapper"
      >
        <span
          className="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-labelledby="undefined generated-id"
          className="euiSuperSelectControl euiSuperSelectControl--compressed"
          onChange={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          type="button"
        >
          
        </button>
        <div
          className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            className="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              style={null}
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fillRule="nonzero"
                xlinkHref="#arrow_down-a"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/FontPicker with value 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="euiPopover__anchor euiSuperSelect__popoverAnchor"
  >
    <input
      type="hidden"
      value="'American Typewriter', 'Courier New', Courier, Monaco, mono"
    />
    <div
      className="euiFormControlLayout euiFormControlLayout--compressed"
    >
      <div
        className="euiFormControlLayout__childrenWrapper"
      >
        <span
          className="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: 
          <div
            style={
              Object {
                "fontFamily": "'American Typewriter', 'Courier New', Courier, Monaco, mono",
              }
            }
          >
            American Typewriter
          </div>
          , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-labelledby="undefined generated-id"
          className="euiSuperSelectControl euiSuperSelectControl--compressed"
          onChange={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          type="button"
        >
          <div
            style={
              Object {
                "fontFamily": "'American Typewriter', 'Courier New', Courier, Monaco, mono",
              }
            }
          >
            American Typewriter
          </div>
        </button>
        <div
          className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            className="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              style={null}
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fillRule="nonzero"
                xlinkHref="#arrow_down-a"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
